--- a/views/index.ejs
+++ b/views/index.ejs
@@ -85,7 +85,8 @@
               <ul class="nav">
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="#about">About this App</a></li>
-                <li><a href="/">Sign up!</a></li>
+                <li><a data-toggle="modal" href="#signupModal">Register Account</a></li>
+                <li><a data-toggle="modal" href="#loginModal">Log in</a></li>
               </ul>
             </div><!--/.nav-collapse -->
           </div>
@@ -104,6 +105,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/js/aryclient.js"></script>
 
   </body>
   </html>
