Reorganized test comments; Added flash dep and req

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,6 +22,10 @@
 </head>
 <body>
 
+  <% if (message) { %>
+<p><%= message %></p>
+<% } %>
+
   <div id="signupModal" class="modal hide fade smallModal">
     <form id="signup-form" action="/signup" method="post" class="form-horizontal">
       <div class="modal-header"><a data-dismiss="modal" class="close"></a>
