--- a/views/login.ejs
+++ b/views/login.ejs
@@ -21,6 +21,7 @@
         </fieldset>
       </div>
       <div class="form-footer">
+        <a href="/" data-dismiss="modal" class="btn">Back</a>
         <button class="btn btn-primary" type="submit">Log In</button>
       </div>
     </form>
