Removed extra unames and modal stuff

--- a/views/create_job.ejs
+++ b/views/create_job.ejs
@@ -14,7 +14,7 @@
         <div class="control-group">
           <label class="control-label" for="jobText">Job Name:</label>
           <div class="controls">
-            <input type="text" id="jobName" class="input-xlarge uname" />
+            <input type="text" id="jobName" class="input-xlarge" />
           </div>
         </div>
 
