--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,8 +12,7 @@
       <div class="form-body">
         <fieldset>
           <div class="control-group">
-            <input type="text" name="username" placeholder="Username" class="input-xlarge uname" />
-            <span id="imagePlaceHolder"></span>
+            <input type="text" name="username" placeholder="Username" class="input-xlarge" />
           </div>
           <div class="control-group">
             <input type="password" name="password" placeholder="Password" class="input-xlarge" />
@@ -21,7 +20,7 @@
         </fieldset>
       </div>
       <div class="form-footer">
-        <a href="/" data-dismiss="modal" class="btn">Back</a>
+        <a href="/" class="btn">Back</a>
         <button class="btn btn-primary" type="submit">Log In</button>
       </div>
     </form>
