Rewrote signup to work; Added some redirects for already logged in users;

--- a/views/job.ejs
+++ b/views/job.ejs
@@ -4,7 +4,9 @@
   <% include head %>
 
   <body>
-    job
+    <% if (message) { %>
+      <p><%= message %></p>
+    <% } %>
 
     <% include jsinclude %>
   </body>
