changed findJob to findJobByUser & messages_key to messages; rewrote job handler;
findJob was finding by user_id, but now we also sometimes might need to find by job_id
messages_key is unncessary, we can just store an array of messages directly in the job document.
right now it's acting as a single string though.
redid job to only look up the job by user_id from session instead of getting user and then job.

--- a/views/create_job.ejs
+++ b/views/create_job.ejs
@@ -14,28 +14,28 @@
         <div class="control-group">
           <label class="control-label" for="jobText">Job Name:</label>
           <div class="controls">
-            <input type="text" id="jobName" class="input-xlarge" />
+            <input type="text" name="jobName" id="jobName" class="input-xlarge" />
           </div>
         </div>
 
         <div class="control-group">
           <label class="control-label" for="jobText">Messages: <br />(semicolon delimited)</label>
           <div class="controls">
-            <textarea id="jobText" rows="10"></textarea>
+            <textarea name="jobText" id="jobText" rows="10"></textarea>
           </div>
         </div>
 
         <div class="control-group">
           <label class="control-label" for="targetNumber">Delivery Number:</label>
           <div class="controls">
-            <input type="text" id="targetNumber" placeholder="6193330000" class="input-xlarge" />
+            <input type="text" name="targetNumber" id="targetNumber" placeholder="6193330000" class="input-xlarge" />
           </div>
         </div>
 
         <div class="control-group">
           <label class="control-label" for="frequency">Frequency (hours):</label>
           <div class="controls">
-            <input type="text" id="frequency" placeholder="6" class="input-xlarge" />
+            <input type="text" name="frequency" id="frequency" placeholder="6" class="input-xlarge" />
           </div>
         </div>
       </fieldset>
